BE-788 Add a new API for unregistering user and BE-789 Add a new API for listing registered users
